--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <h2>My Course Goal</h2>
       <!-- interpolation -->
       <p>{{ courseGoal }}</p> 
+      <!-- binding attributes -->
+      <p>Learn more <a v-bind:href="vueLink">about Vue</a>.</p>
     </section>
   </body>
 </html>
