--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section id="user-goal">
       <h2>My Course Goal</h2>
       <!-- interpolation -->
-      <p>{{ courseGoal }}</p> 
+      <p>{{ outputGoal() }}</p> 
       <!-- binding attributes -->
       <p>Learn more <a v-bind:href="vueLink">about Vue</a>.</p>
     </section>
