--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <section id="user-goal">
       <h2>My Course Goal</h2>
       <!-- interpolation -->
-      <p>{{ outputGoal() }}</p> 
+      <!-- <p v-html="outputGoal()"></p>  -->
+      <p>{{ outputGoal() }}</p>
       <!-- binding attributes -->
       <p>Learn more <a v-bind:href="vueLink">about Vue</a>.</p>
     </section>
